# Fast-Perching

./: .gitignore  README.md
src/odom_vis/odom_visualization/: CMakeLists.txt
src/odom_vis/odom_visualization/src/: odom_visualization.cpp  odom_visualization_plate.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: rviz_sim.rviz
src/planning/launch/: perching.launch
src/planning/src/: planning_nodelet.cpp
src/traj_opt/: CMakeLists.txt  package.xml
src/traj_opt/include/traj_opt/: lbfgs_raw.hpp  minco.hpp  poly_traj_utils.hpp  traj_opt.h
src/traj_opt/src/: traj_opt_perching.cc
src/vis_utils/: CMakeLists.txt  package.xml
src/vis_utils/include/vis_utils/: vis_utils.hpp
