<?xml version="1.0"?>
<package format="2">
  <name>vis_utils</name>
  <version>0.0.0</version>
  <description>The vis_utils package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

</package>
